# deckfs

./: .codecov.yml  .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  TODO.md  config.yaml.example  debug.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: release.yml  tests.yml
examples/01_toggle_mute/: action.sh  background.sh  update.sh
examples/02_launch_firefox/: action.py  action.sh
examples/03_next_track/: action.js
examples/04_clock/: background.py  draw.py  update.py
examples/05_ha_light/: action.sh  background.sh  entity.txt  update.sh
examples/06_load_avg/: background.sh  draw.py
src/: __init__.py  __main__.py  cli.py  config.yaml.example  runner.py  setup.py
src/core/: button.py  coordinator.py  daemon.py  devices.py  files.py  hardware.py  processes.py
src/handlers/: __init__.py  file_handler.py
src/utils/: config.py  debouncer.py  device.py  event_bus.py  file_utils.py  image_utils.py  logger.py  script_manager.py  setup.py
tests/: __init__.py  test_button.py  test_debouncer.py  test_file_operations.py  test_process_manager.py
