[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-deck-fs"
version = "0.1.0"
authors = [
    {name = "Denis Gryzlov", email = "gryzlov@gmail.com"},
]
description = "Linux daemon for Stream Deck control without GUI through filesystem"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
keywords = ["stream-deck", "linux", "daemon", "filesystem"]
dependencies = [
    "streamdeck>=0.9.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/spinogrizz/stream-deck-fs"
"Bug Reports" = "https://github.com/spinogrizz/stream-deck-fs/issues"
"Source" = "https://github.com/spinogrizz/stream-deck-fs"

[project.scripts]
stream-deck-fs = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]