[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deckfs"
version = "0.1.0"
authors = [
    {name = "Denis Gryzlov", email = "gryzlov@gmail.com"},
]
description = "Linux daemon for Stream Deck control without GUI through filesystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
keywords = ["stream-deck", "linux", "daemon", "filesystem"]
dependencies = [
    "streamdeck>=0.9.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "PyYAML>=6.0",
    "pyudev>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/spinogrizz/deckfs"
"Bug Reports" = "https://github.com/spinogrizz/deckfs/issues"
"Source" = "https://github.com/spinogrizz/deckfs"
Repository = "https://github.com/spinogrizz/deckfs"
Documentation = "https://github.com/spinogrizz/deckfs#readme"

[project.scripts]
deckfs = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]